--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "devStart": "node index.js"
+    "devStart": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
